<resources>
    <string name="app_name">Camera Studio</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_text">Touch to focus, and press the camera button to take photos, for more features go to settings and try to use Camera v2. Camera Studio is completely free.\n\nPrivacy Policy: Location permission is required for geotagging, but this is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this purpose).</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure Locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_burst_mode">Cancelled burst mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_summary">Set a timer for the camera</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for burst mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or burst mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Burst</string>
    <string name="preference_burst_mode_summary">Take multiple photos in succession</string>
    <string name="preference_burst_interval">Burst mode interval</string>
    <string name="preference_burst_interval_summary">Delay (if any) between taking photos in burst mode</string>
    <string name="preference_screen_camera_controls_more">Advanced Controls</string>
    <string name="preference_touch_capture">Touch to capture</string>
    <string name="preference_touch_capture_summary">Take a photo just by touching or double-tapping the preview</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_volume_keys_summary">Set behaviour for when volume keys are pressed</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="preference_audio_control_summary">Take photo or record video when a noise is detected, or on a voice command (\"cheese\"). When enabled, use the on-screen microphone button to start and stop listening.</string>
    <string name="preference_audio_noise_control_sensitivity">Audio control sensitivity</string>
    <string name="preference_audio_noise_control_sensitivity_summary">Noise level sensitivity for audio (loud noise) option</string>
    <string name="preference_save_location">Save location</string>
    <string name="preference_save_location_summary">Folder to save the photo/video files in</string>
    <string name="preference_using_saf">Use Storage Access Framework</string>
    <string name="preference_using_saf_summary">Whether to use Android 5\'s Storage Access Framework for saving photos and videos</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_zulu_time_summary">Whether to use local or UTC (Coordinated Universal Time) time for naming photos and videos</string>
    <string name="preference_show_when_locked">Show camera when locked</string>
    <string name="preference_show_when_locked_summary">If enabled, Camera Studio will still show above any lockscreen (you\'ll still have to unlock to access Settings, Gallery etc)</string>
    <string name="preference_startup_focus">Perform auto-focus on startup</string>
    <string name="preference_startup_focus_summary">Whether to auto-focus when Camera Studio is started. If you have the problem of flash turning on when starting, disable this option</string>
    <string name="preference_lock_video">Lock screen when recording video</string>
    <string name="preference_lock_video_summary">When recording video, the GUI will be locked to prevent accidentally stopping recording. Swipe the screen to unlock. Note that video recording will always stop if the app goes into background or the screen is blanked.</string>
    <string name="preference_rotate_preview">Rotate preview</string>
    <string name="preference_rotate_preview_summary">Option to rotate the preview (won\'t affect resultant photos/videos)</string>
    <string name="preference_screen_gui">Camera Interface</string>
    <string name="preference_preview_size">Preview size</string>
    <string name="preference_preview_size_summary">How to choose the preview size</string>
    <string name="preference_ui_placement">UI placement</string>
    <string name="preference_ui_placement_summary">Whether to have a left-handed or right-handed user interface</string>
    <string name="preference_immersive_mode">Immersive mode</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="exposure">Exposure</string>
    <string name="exposure_lock">Exposure Lock</string>
    <string name="switch_to_front_camera">Switch to front camera</string>
    <string name="switch_to_video">Switch to video mode</string>
    <string name="trash">Delete Last Picture</string>
    <string name="share">Share Photo</string>
    <string name="audio_control_start">Start audio listening</string>
    <string name="dark">Dark</string>
    <string name="bright">Bright</string>
    <string name="exposure_shutter_speed">Shutter speed</string>
    <string name="pause_video">Pause video recording</string>
    <string name="edit">edit</string>
</resources>