<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_main"
    android:background="#191919"
    tools:context="com.embaby.camerastudio.OpenCamera.MainActivity_CameraOpen">





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_48dp_white"
            />

        <GridLayout
            android:id="@+id/register_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            >

            <!--<fr.castorflex.android.circularprogressbar.CircularProgressBar-->
            <!--android:layout_gravity="center"-->

            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:indeterminate="true"-->
            <!--app:cpb_color="@color/whiteOff"-->
            <!--app:cpb_rotation_speed="0.7"-->
            <!--app:cpb_sweep_speed="0.6"-->
            <!--app:cpb_stroke_width="2dp"-->
            <!--app:cpb_min_sweep_angle="20"-->
            <!--app:cpb_max_sweep_angle="300"-->
            <!--/>-->
        </GridLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />



    <ImageButton
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/uni"
        android:onClick="clickedTakePhoto"
        android:layout_centerVertical="true"
        android:background="@null"
        />

    <View
        android:visibility="gone"
        android:id="@+id/dummy_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        />


    <com.embaby.camerastudio.Helpers.ResizeableImageView
        android:visibility="gone"
        android:id="@+id/image_csdk"
        android:background="@color/black"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <ImageButton
        android:id="@+id/pause_video"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/pause_video"
        android:src="@drawable/ic_pause_circle_outline_white_48dp"
        android:onClick="clickedPauseVideo"
        android:layout_above="@+id/take_photo"
        android:background="@null"
        />



    <LinearLayout
        android:id="@+id/zoom"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/zoom_out_image"
            android:tint="@color/white"
            android:layout_margin="5dp"
            android:padding="6dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/circle_small"
            android:src="@drawable/ic_remove_24dp_white"/>

        <ImageView
            android:id="@+id/zoom_in_image"
            android:tint="@color/white"
            android:layout_margin="5dp"
            android:padding="6dp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/circle_small"
            android:src="@drawable/ic_add_24dp_black"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/zoom_seekbar"
        android:contentDescription="@string/zoom"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        />

    <SeekBar
        android:id="@+id/focus_seekbar"
        android:contentDescription="@string/focus_distance"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:visibility="invisible"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/gui_anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="1dp"
        android:scaleType="fitCenter"
        />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/gallery"
        android:src="@drawable/gallery"
        android:onClick="clickedGallery"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/ic_settings_24dp_white"
        android:onClick="clickedSettings"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_popup"
        android:src="@drawable/popup"
        android:onClick="clickedPopupSettings"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/exposure_lock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/exposure_lock"
        android:onClick="clickedExposureLock"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/exposure"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="13dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/exposure"
        android:src="@drawable/ic_exposure_white_48dp"
        android:onClick="clickedExposure"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/switch_video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/switch_to_video"
        android:src="@drawable/ic_camera_alt_white_24dp"
        android:onClick="clickedSwitchVideo"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/switch_to_front_camera"
        android:src="@drawable/ic_switch_camera_white_24dp"
        android:onClick="clickedSwitchCamera"
        android:background="@color/transparent"
        />

    <ImageButton
        android:id="@+id/audio_control"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/audio_control_start"
        android:src="@drawable/ic_mic_white_24dp"
        android:onClick="clickedAudioControl"
        android:background="@color/transparent"
        />

    <!-- should be at left-most -->
    <ImageButton
        android:id="@+id/trash"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/trash"
        android:src="@drawable/ic_delete_outlina_white_24dp"
        android:onClick="clickedTrash"
        android:background="@color/transparent"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_outlina_white_24dp"
        android:onClick="clickedShare"
        android:background="@color/transparent"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit_outlina_white_24dp"
        android:onClick="clickedEdit"
        android:background="@color/transparent"
        android:visibility="gone"
        />


    <LinearLayout
        android:id="@+id/sliders_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@drawable/border_rectangle_black_transparent">

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/exposure_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:textColor="@color/white"
                android:id="@+id/exposure_seekbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exposure_compensation"
                />

            <!-- alpha set as workaround for Android 7 bug where seekbar doesn't show when rotated -->
            <SeekBar
                android:id="@+id/exposure_seekbar"
                android:contentDescription="@string/exposure_compensation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exposure_seekbar_text"
                android:alpha="0.9"
                />

            <TextView
                android:id="@+id/exposure_seekbar_text_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/dark"
                android:layout_alignLeft="@+id/exposure_seekbar"
                android:layout_below="@+id/exposure_seekbar"
                />

            <TextView
                android:id="@+id/exposure_seekbar_text_bright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/bright"
                android:layout_alignRight="@+id/exposure_seekbar"
                android:layout_below="@+id/exposure_seekbar"
                />

            <LinearLayout
                android:id="@+id/exposure_seekbar_zoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/exposure_seekbar_text_dark">


                <ImageView
                    android:id="@+id/zoom_out_expo"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_circle_outline_white_24dp"/>


                <ImageView
                    android:id="@+id/zoom_in_expo"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_circle_outline_white_24dp"/>


            </LinearLayout>



        </RelativeLayout>

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/manual_exposure_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/iso_seekbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iso"
                />

            <!-- alpha set as workaround for Android 7 bug where seekbar doesn't show when rotated -->
            <SeekBar
                android:id="@+id/iso_seekbar"
                android:contentDescription="@string/iso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iso_seekbar_text"
                android:alpha="0.9"
                />

            <TextView
                android:id="@+id/exposure_time_seekbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iso_seekbar"
                android:text="@string/exposure_shutter_speed"
                />

            <!-- alpha set as workaround for Android 7 bug where seekbar doesn't show when rotated -->
            <SeekBar
                android:id="@+id/exposure_time_seekbar"
                android:contentDescription="@string/exposure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exposure_time_seekbar_text"
                android:alpha="0.9"
                />

        </RelativeLayout>

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/manual_white_balance_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/white_balance_seekbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white_balance"
                />

            <!-- alpha set as workaround for Android 7 bug where seekbar doesn't show when rotated -->
            <SeekBar
                android:id="@+id/white_balance_seekbar"
                android:contentDescription="@string/white_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/white_balance_seekbar_text"
                android:alpha="0.9"
                />

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/popup_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        />

    <FrameLayout
        android:id="@+id/prefs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        />

    <FrameLayout
        android:id="@+id/locker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ScrollView
        android:id="@+id/hide_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/white"
        />

</RelativeLayout>
